NIHVIVO-1788 and 1799: fixed welcome message overlap

--- a/themes/wilma/css/wilma.css
+++ b/themes/wilma/css/wilma.css
@@ -350,12 +350,11 @@ p.password-note{
     margin-bottom: 10px;
 }
 #welcome-message{
-    position:absolute;
-    width:930px;
     border: 1px dotted #E2C822;
     background-color: #FFF9D7;
     padding: 0.25em;
-    margin-top:-8px;  
+    margin-bottom: 8px;
+    margin-top: -8px;
 }
 /* HOME SEARCH ------>  */
 #search-home {
